--- a/views/game/editor/footer_menu.jade
+++ b/views/game/editor/footer_menu.jade
@@ -8,9 +8,11 @@ footer
 							a(href='#',onclick='controls.editor.toggleCamera("editor")')
 								i.icon-facetime-video
 								|  Bird's Eyes View
+						li
 							a(href='#',onclick='controls.editor.toggleCamera("flight")')
 								i.icon-facetime-video
 								|  Ship View
+						li
 							a(href='#',onclick='controls.editor.toggleCamera("character")')
 								i.icon-facetime-video	
 								|  Character View
@@ -18,9 +20,13 @@ footer
 					i.icon-camera.icon-large
 					|  Camera
 			li.button
+				menu.sub_menu
+					ul.unstyled
+						include instances
 				a(href='#')
-					i.icon-search
-					|  Scene explorer
+					i.icon-picture
+					|  Scene changer
+
 			li.selected 
 				h4 Selected
 					small 0
