- Engine is now stabilized with 'Droopy' and different startup environment - Now moving onto getting character into initialization and being able to   move around.. in the void

--- a/views/game/editor/footer_menu.jade
+++ b/views/game/editor/footer_menu.jade
@@ -16,16 +16,14 @@ footer
 							a(href='#',onclick='controls.editor.toggleCamera("character")')
 								i.icon-facetime-video	
 								|  Character View
-				a(href='#') 
+				a(title='Camera',href='#') 
 					i.icon-camera.icon-large
-					|  Camera
 			li.button
 				menu.sub_menu
 					ul.unstyled
 						include instances
-				a(href='#')
+				a(title='Scene changer',href='#')
 					i.icon-picture
-					|  Scene changer
 
 			li.selected 
 				h4 Selected
