--- a/views/game/editor/header_menu.jade
+++ b/views/game/editor/header_menu.jade
@@ -51,13 +51,11 @@ header
 					a.make_window(href='#',title='Make window')
 						i.icon-external-link
 			li.button.object_groups
-				a(href='#') 
+				a(title='Object groups',href='#') 
 					i.icon-group.icon-large
-					|  Object groups
 			li.button.object_properties
-				a(href='#') 
+				a(title='Object properties',href='#') 
 					i.icon-gear.icon-large
-					|  Object properties
 				menu.sub_menu
 					a.make_window(href='#',title='Make window')
 						i.icon-external-link
@@ -141,9 +139,8 @@ header
 										i.icon-minus-sign-alt
 
 			li.button.object_library
-				a(href='#') 
+				a(title='Object library',href='#') 
 					i.icon-reorder.icon-large
-					|  Object library
 				menu.sub_menu
 					a.make_window(href='#',title='Make window')
 						i.icon-external-link
@@ -167,6 +164,5 @@ header
 						i.icon-plus-sign-alt
 						|  Add
 			li.button.editor_settings
-				a(href='#') 
+				a(title='Editor settings',href='#') 
 					i.icon-gears.icon-large
-					|  Editor settings
