--- a/views/game/editor/scripts.jade
+++ b/views/game/editor/scripts.jade
@@ -1,12 +1,7 @@
 script(src='/shared/scripts/bootstrap.min.js')
 script(src='/game/scripts/editor.js')
 script(src='/game/scripts/editor/toolbars.js')
+script(src='/game/scripts/editor/texture_editor.js')
 script(src='/game/scripts/editor/object_library.js')
 script(src='/game/scripts/editor/object_properties.js')
 script(src='/game/scripts/editor/selected.js')
-script(type='text/javascript')
-
-	var editor = new editor();
-
-	var ray = new THREE.Raycaster();
-	var projector = new THREE.Projector();
