- Fixed JADE templates - Working on room building tool

--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -51,7 +51,7 @@ script(type='x-shader/x-vertex', id='water_vertexShader')
 	include shaders/water.vertexShader
 script(type='x-shader/x-fragment', id='water_fragmentShader')
 	include shaders/water.fragmentShader
-script(type='text/javascript')
+script(type='text/javascript').
 	/*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 		Globals
 	\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
