--- a/views/logged_in.jade
+++ b/views/logged_in.jade
@@ -1,8 +1,7 @@
 !!!5
 html
 	head
-		script(type='text/javascript')
-
+		script.(type='text/javascript').
 			window.open('','_parent','');
 			window.close();
 	body
