--- a/views/website/footer.jade
+++ b/views/website/footer.jade
@@ -1,6 +1,6 @@
 script(src='/shared/scripts/jquery.min.js')
 script(src='/shared/scripts/jquery.cycle.all.js')
-script
+script.
 		// Google Analytics
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-37159175-1']);
@@ -19,7 +19,7 @@ case page
 	when 'pages/guide_edit'
 		script(src='/shared/scripts/tinymce/tinymce.min.js')
 		script(src='/shared/scripts/tinymce/jquery.tinymce.min.js')
-		script
+		script.
 			tinymce.init({
 				selector: "textarea[rows=20]",
 					theme: "modern",
@@ -40,7 +40,7 @@ case page
 	when 'pages/guide_new'
 		script(src='/shared/scripts/tinymce/tinymce.min.js')
 		script(src='/shared/scripts/tinymce/jquery.tinymce.min.js')
-		script
+		script.
 			tinymce.init({
 				selector: "textarea[rows=20]",
 					theme: "modern",
