Moved grid drawers into separate class. Beginning work on room building class

--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -38,6 +38,8 @@ script(src='/game/scripts/objects/environment.js')
 script(src='/game/scripts/objects/projectiles.js')
 script(src='/game/scripts/objects/ships.js')
 script(src='/game/scripts/scenes.js')
+script(src='/game/scripts/scenes/grid.js')
+script(src='/game/scripts/scenes/rooms.js')
 script(src='/game/scripts/textures.js')
 script(src='/game/scripts/textures/sprites.js')
 script(src='/game/scripts/ui.js')
