Added widgets to dashboard

--- a/views/admin/footer.jade
+++ b/views/admin/footer.jade
@@ -3,3 +3,7 @@ script(src='/shared/scripts/jQueryRotateCompressed.2.2.js')
 script(src='/shared/scripts/socket.io.min.js')
 script(src='/shared/scripts/three.min.js')
 script(src='/shared/scripts/tween.min.js')
+script(src='/shared/scripts/smoothie.js')
+case page
+	when 'dashboard'
+		script(src='/admin/scripts/dashboard.js')
