--- a/views/admin/header.jade
+++ b/views/admin/header.jade
@@ -4,4 +4,10 @@ title= title
 link(rel='stylesheet', href='/shared/styles/reset.css')
 link(rel='stylesheet', href='/shared/styles/bootstrap.min.css')
 link(rel="stylesheet",href="/shared/font-awesome/css/font-awesome.min.css")
-
+case page
+	when 'dashboard'
+		style
+			body {
+				padding-top: 60px;
+				padding-bottom: 40px;
+			}
