--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -5,7 +5,7 @@ html
 	body
 		case page
 			when 'dashboard'
-				include dashboard			
-			when 'pages/about'
-				include pages/about
+				include pages/dashboard			
+			when 'scene_director'
+				include pages/scene_director
 	include footer
