Got server log working

--- a/views/admin/footer.jade
+++ b/views/admin/footer.jade
@@ -1,3 +1,4 @@
+script(src='/shared/scripts/bootstrap.min.js')
 script(src='/shared/scripts/jquery.min.js')
 script(src='/shared/scripts/jQueryRotateCompressed.2.2.js')
 script(src='/shared/scripts/socket.io.min.js')
