DB connection with Mongoose appears to be working. Now going to move to rebuilding the Db model as Mongoose Schema models

--- a/views/admin/pages/dashboard.jade
+++ b/views/admin/pages/dashboard.jade
@@ -23,13 +23,13 @@
 			h3 Game management
 			ul.nav.nav-pills
 				li
+					a(href='/admin/mechanics') Mechanics
+				li
+					a(href='/admin/object_editor') Object editor
+				li
 					a(href='/admin/scene_director') Scene director
 				li
-					a(href='#') Object editor
-				li
-					a(href='#') Texture painter
-				li
-					a(href='#') Mechanics
+					a(href='/admin/texture_painter') Texture painter
 			h3 System management
 			.col-md-2
 				.btn-group-vertical
@@ -45,4 +45,4 @@
 	.row
 		.col-md-12
 			h3 Server log
-			textarea.well.well-sm.col-md-12(rows="15")
+		.n	well.well-sm.col-md-12(rows="15")
