Instance updates are working. Now onto adding objects from DB

--- a/views/admin/pages/dashboard.jade
+++ b/views/admin/pages/dashboard.jade
@@ -45,4 +45,4 @@
 	.row
 		.col-md-12
 			h3 Server log
-		.n	well.well-sm.col-md-12(rows="15")
+		textarea.well.well-sm.col-md-12(rows="15",style='color:#888888')
