Water is broken, going to try implementing stemkoski

--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -15,6 +15,7 @@ script(src='/shared/scripts/jquery.min.js')
 script(src='/shared/scripts/jQueryRotateCompressed.2.2.js')
 script(src='/shared/scripts/socket.io.min.js')
 script(src='/shared/scripts/three.js')
+script(src='/shared/scripts/Mirror.js')
 script(src='/shared/scripts/tween.min.js')
 script(src='/shared/scripts/THREEx.KeyboardState.js')
 script(src='/shared/scripts/stats.min.js')
