- Stylus integrated - Going to do some hardcore rebuilding

--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -6,6 +6,12 @@ html
 		case page
 			when 'dashboard'
 				include pages/dashboard			
+			when 'mechanics'
+				include pages/mechanics
+			when 'object_editor'
+				include pages/object_editor
 			when 'scene_director'
 				include pages/scene_director
+			when 'texture_painter'
+				include pages/texture_painter
 	include footer
