--- a/views/admin/pages/dashboard.jade
+++ b/views/admin/pages/dashboard.jade
@@ -7,6 +7,11 @@
 				span.icon-bar
 				span.icon-bar
 		#navbar-main.collapse.navbar-collapse
+			ul.nav.navbar-nav
+				li
+					a(href='/') Website
+				li
+					a(href='/play') Play
 			ul.nav.navbar-nav.navbar-right
 				li
 					a(href='#') Login
