Committing to repo

--- a/public/tests/layouts/website/test.html
+++ b/public/tests/layouts/website/test.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<link type='text/css' rel='stylesheet' href='test.css' />
+  	<link type='text/css' rel='stylesheet' href='css/test.css' />
 </head>
 <body>
 
-  <img id='logo' src='logo.png' />
+  <img id='logo' src='../shared/images/logo.png' />
 <div class='panel1'>
 	<div class='contents'>
 		<ul>
@@ -95,8 +95,26 @@
 	</ul>	
 	</div>
 </div>
+<div class='panel6'>
+	<div class='contents'>
+		<h2>Panel 5 heading</h2> 	
+		<p> Some text </p> 	
+		<ul>
+  		<li>
+	  		<a class='textbox' href='#'>
+	  			Text
+	  		</a>
+	 	</li>
+	 	<li>
+	  		<a class='button' href='#'>
+	  			Button
+	  		</a>
+	 	</li>
+	</ul>	
+	</div>
+</div>
 <div id='bg'>
-	<img src='bg.png' class='stretch' alt='' />
+	<img src='../shared/images/bg.png' class='stretch' alt='' />
 </div>
 </body>
 </html>
