- Created homepage HTML jade template - Imported borders from project area - Using example screenshot as temporary background - going to get the   homepage up and running before worrying too much about JS

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,10 @@ html
 	head
 		include header
 	body
-		case page_template
-			when "website/home"
-				include website/home
-		include footer
+		#wrapper
+			case page_template
+				when "website/home"
+					include website/home
+			include footer
+		#bg
+			img(src='/shared/images/test_bg.png',class='stretch',alt='')
