--- a/views/website/home.jade
+++ b/views/website/home.jade
@@ -1,6 +1,9 @@
 header#page_header
 	menu
-		ul.horiz_nav
+		h1
+			a(href='/')
+				img(src='/shared/images/logo.png')
+		ul.horiz_nav		
 			li
 				a(href='#') Like
 			li
