--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,8 @@ html
 			case page_template
 				when "website/home"
 					include website/home
+				when "website/about"
+					include website/about
 			include footer
 		#bg
 			img(src='/shared/images/test_bg.png',class='stretch',alt='')
