--- a/views/header.jade
+++ b/views/header.jade
@@ -1,4 +1,6 @@
 title= title
 case page_template
-			when "website/home"
-				include website/home/header
+	when "website/home"
+		include website/home/header
+	when "website/about"
+		include website/about/header
