--- a/public/website/styles/home.styl
+++ b/public/website/styles/home.styl
@@ -16,140 +16,10 @@ defaults()
 		margin 0
 		float left
 
-// Control Styles
-
-button()
-	border-style solid
-	border-width 15px
-	border-image url("/shared/images/border-05.png") 71 69 69 72 fill stretch
-	color #333
-	text-decoration none
-	margin 0.75em 0 0 0
-	float left
-	&:hover
-		button_hover()
-
-button_hover()
-	color #999999
-	border-width 15px
-	border-image url("/shared/images/border-07.png") 71 69 69 72 fill stretch
-	transition all 0.25s ease
-
-textbox()
-	background transparent none
-	border-style solid
-	border-width 10px
-	border-image url("/shared/images/border-04.png") 71 69 69 72 fill stretch
-	color #666666
-	text-decoration none
-	margin 0.75em 0 0 0
-	&:hover
-		textbox_hover()
-
-textbox_hover()
-	color #999999
-	border-image url("/shared/images/border-08.png") 71 69 69 72 fill stretch
-	transition all 0.25s ease
-	box-sizing border-box
-
-// Content Styles
-
-featured_content_panel()
-	border-width 28px
-	border-image url("/shared/images/border-03.png") 80 77 fill round
-	color #999999
-	box-sizing border-box
-	&
-		margin-left 2%
-	h2
-		color #FFFFFF
-		text-transform uppercase
-	> *
-		margin-left 0
-		margin-right 0
-
-
-featured_content_scroller_panel()
-	border-style solid
-	border-width 28px
-	border-image url("/shared/images/border-02.png") 42 41 42 42 fill round
-	box-sizing border-box
-	&
-		margin-left 2%
-	> *
-		margin-left 0
-		margin-right 0
-	img
-		margin-right 15px
-
-
-feed_content_panel()
-	border-style solid
-	border-width 22px
-	border-image url("/shared/images/border-08.png") 80 77 fill round
-	box-sizing border-box
-	&
-		margin-left 4%
-	h3
-		margin 0 0 0.825em 0
-		a
-			text-decoration none
-			color #AAAAAA
-	.thumb
-		max-width 30%
-		img
-			margin-right 15px
-	p
-		margin-top -2.5px
-		color #999999
-
-// Menu Layouts
-
-horiz_nav()
-	list-style none
-	li 
-		float left	
-
-vert_nav()
-	float left
-	height 100%
-	list-style none
-	li 
-		float left	
-		clear both
-
-thumb_nav()
-	margin 10px 20px
-	float left
-	list-style none
-	li 
-		margin 0
-		display block
-		float left
-		a
-			text-decoration none
-			display block
-			float left
-			border-style solid
-			border-width 24px
-			border-image: url("/shared/images/border-08.png") 76 73 78 75 fill round;
-			box-sizing border-box
-			color #999999
-			&:hover
-				color #FFFFFF
-
-// Menu Styles
-
-main_menu()
-	overflow visible
-	border-style solid
-	border-width 45px
-	border-image url("/shared/images/border-01.png") 81 fill round
-	transition-delay 0s
-	transition-duration 0.5s
-	transition-property all
-	transition-timing-function ease
-	box-sizing border-box
+@import "../../shared/styles/forms.styl"
+@import "../../shared/styles/menu_layouts.styl"
+@import "../../shared/styles/menu_styles.styl"
+@import "../../shared/styles/panels.styl"
 
 
 /*
