- Removed editor - Game is fully working and not 404'ing on anything - Renamed public/images/ to assets/ to bring it in line with the game   structure

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,4 +11,4 @@ html
 					include website/about
 			include footer
 		#bg
-			img(src='/images/shared/test_bg.png',class='stretch',alt='')
+			img(src='/assets/shared/test_bg.png',class='stretch',alt='')
