--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -1,51 +1,41 @@
 meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 title= title
-link(rel='stylesheet', href='/shared/styles/reset.css')
-link(rel='stylesheet', href='/shared/styles/bootstrap.min.css')
-link(rel="stylesheet",href="/shared/font-awesome/css/font-awesome.min.css")
-link(rel='stylesheet', href='/game/styles/game.css')
-- if (editor==true)
-	link(rel='stylesheet', href='/game/styles/editor.css')
-	link(rel='stylesheet', href='/game/styles/editor/object_library.css')
-	link(rel='stylesheet', href='/game/styles/editor/object_properties.css')
-	link(rel='stylesheet', href='/game/styles/editor/window.css')
-link(rel='stylesheet', href='/game/styles/ui.css')
-script(src='/shared/scripts/jquery.min.js')
-script(src='/shared/scripts/jQueryRotateCompressed.2.2.js')
-script(src='/shared/scripts/socket.io.min.js')
-script(src='/shared/scripts/three.js')
-script(src='/shared/scripts/Mirror.js')
-script(src='/shared/scripts/tween.min.js')
-script(src='/shared/scripts/THREEx.KeyboardState.js')
-script(src='/shared/scripts/stats.min.js')
-script(src='/shared/scripts/smoothie.js')
-script(src='/shared/scripts/SimplexNoise.js')
-script(src='/game/scripts/client.js')
-script(src='/game/scripts/controls.js')
-script(src='/game/scripts/controls/character.js')
-script(src='/game/scripts/controls/editor_controls.js')
-script(src='/game/scripts/controls/flight.js')
-script(src='/game/scripts/effects.js')
-script(src='/game/scripts/effects/bullets.js')
-script(src='/game/scripts/effects/clouds.js')
-script(src='/game/scripts/effects/particles.js')
-script(src='/game/scripts/effects/water.js')
-script(src='/game/scripts/engine.js')
-script(src='/game/scripts/events.js')
-script(src='/game/scripts/objects.js')
-script(src='/game/scripts/objects/characters.js')
-script(src='/game/scripts/objects/environment.js')
-script(src='/game/scripts/objects/projectiles.js')
-script(src='/game/scripts/objects/ships.js')
-script(src='/game/scripts/scenes.js')
-script(src='/game/scripts/scenes/grid.js')
-script(src='/game/scripts/scenes/rooms.js')
-script(src='/game/scripts/textures.js')
-script(src='/game/scripts/textures/sprites.js')
-script(src='/game/scripts/ui.js')
-- if (editor==true)
-	include editor/scripts
+link(rel='stylesheet', href='/styles/game/game.css')
+link(rel='stylesheet', href='/styles/game/ui.css')
+script(src='/scripts/shared/jquery.min.js')
+script(src='/scripts/shared/jQueryRotateCompressed.2.2.js')
+script(src='/scripts/shared/socket.io.min.js')
+script(src='/scripts/shared/three.js')
+script(src='/scripts/shared/Mirror.js')
+script(src='/scripts/shared/tween.min.js')
+script(src='/scripts/shared/THREEx.KeyboardState.js')
+script(src='/scripts/shared/stats.min.js')
+script(src='/scripts/shared/smoothie.js')
+script(src='/scripts/shared/SimplexNoise.js')
+script(src='/scripts/game/client.js')
+script(src='/scripts/game/controls.js')
+script(src='/scripts/game/controls/character.js')
+script(src='/scripts/game/controls/editor_controls.js')
+script(src='/scripts/game/controls/flight.js')
+script(src='/scripts/game/effects.js')
+script(src='/scripts/game/effects/bullets.js')
+script(src='/scripts/game/effects/clouds.js')
+script(src='/scripts/game/effects/particles.js')
+script(src='/scripts/game/effects/water.js')
+script(src='/scripts/game/engine.js')
+script(src='/scripts/game/events.js')
+script(src='/scripts/game/objects.js')
+script(src='/scripts/game/objects/characters.js')
+script(src='/scripts/game/objects/environment.js')
+script(src='/scripts/game/objects/projectiles.js')
+script(src='/scripts/game/objects/ships.js')
+script(src='/scripts/game/scenes.js')
+script(src='/scripts/game/scenes/grid.js')
+script(src='/scripts/game/scenes/rooms.js')
+script(src='/scripts/game/textures.js')
+script(src='/scripts/game/textures/sprites.js')
+script(src='/scripts/game/ui.js')
 script(type='x-shader/x-vertex', id='cloud_vertexShader')
 	include shaders/cloud.vertexShader
 script(type='x-shader/x-fragment', id='cloud_fragmentShader')
