--- a/public/styles/website/home.styl
+++ b/public/styles/website/home.styl
@@ -2,13 +2,13 @@
 	Import dependencies
 */
 
-@import "fluidity"
-
 @import "../shared/defaults.styl"
 @import "../shared/forms.styl"
 @import "../shared/menu_layouts.styl"
 @import "../shared/menu_styles.styl"
 @import "../shared/panels.styl"
+
+@import "./layouts/homepage.styl"
 
 
 /*
@@ -17,125 +17,78 @@
 
 defaults()
 
-
-/*
-	Layouts
-*/
-
-#wrapper 
-	grid(80%, 1280px)
-
-#page_header 
-	grid-space(100%)
-	margin-bottom 7.5px
-
-	.login
-		horiz_nav()
+#page_header .login
+	horiz_nav()
+	float right
+	color #999999
+	border-style solid
+	border-width 28px
+	border-image url("/assets/shared/border-02.png") 42 41 42 42 fill round
+	box-sizing border-box
+	li
+		margin -10px auto
+	input[type='text']
+		textbox()
 		float right
-		color #999999
-		margin-right 0
-		border-style solid
-		border-width 28px
-		border-image url("/assets/shared/border-02.png") 42 41 42 42 fill round
-		box-sizing border-box
-		li
-			margin -10px auto
-		input[type='text']
-			textbox()
-			float right
-		input[type='checkbox'], label[for='chk_remember']
-			float left
-		input[type='checkbox']
-			margin-left 15px
-			clear left
-		label[for='chk_remember']
-			clear right
-		a
-			button()
+	input[type='checkbox'], label[for='chk_remember']
+		float left
+	input[type='checkbox']
+		margin-left 15px
+		clear left
+	label[for='chk_remember']
+		clear right
+	a
+		button()
 
-#page_section #page_nav 
-	grid-space(20%)
-	ul.vert_nav
-		vert_nav()
-		main_menu()
-		width 85%
-		overflow visible
-		li 
-			margin 0 0 0 -15px
-			width 100%
-		li a			
-			button()
-			width 100%
-			font-weight bold
-			text-transform uppercase
-			text-align center
+#page_section #page_nav ul.vert_nav
+	vert_nav()
+	main_menu()
+	overflow visible
+	li 
+		margin 0 0 0 -15px
+		width 100%
+	li a			
+		button()
+		width 100%
+		font-weight bold
+		text-transform uppercase
+		text-align center
 
 
+#page_section #page_content header
+	featured_content_panel()
 
-#page_section #page_content 
-	grid-space(40%)
-	header
-		featured_content_panel()
-	section
-		featured_content_scroller_panel()
-		ul.horiz_nav
-			horiz_nav()
-	footer
-		ul.thumb_nav
-			thumb_nav()
+#page_section #page_content section
+	featured_content_scroller_panel()
+	ul.horiz_nav
+		horiz_nav()
+
+#page_section #page_content footer
+	ul.thumb_nav
+		thumb_nav()
 
 
-#page_section #page_sidebar 
-	grid-space(40%)
-	article
-		feed_content_panel()
-		img
-			float left
+#page_section #page_sidebar article
+	feed_content_panel()
+	img
+		float left
  
 /*
 	Layout Responsiveness
 */
 
-@media screen and (max-width: 1280px)
-	#wrapper {
-		grid(90%,840px)
-	}
-	#page_section #page_nav {
-		grid-space(35%)
-	}
-	#page_section #page_content {
-		grid-space(60%)
-	}
-	#page_section #page_sidebar {
-		grid-space(97%)
-	}
+@media screen and (max-width: 1140px)
 	#page_section #page_sidebar .thumb {
 		width: 20%;
 	}
-	#page_header .login {
-		margin-right: 42px;
-	}
 
 
-@media screen and (max-width: 800px)
-	#wrapper {
-		grid(95%,320px)
-	}
-	#page_section #page_nav {
-		grid-space(100%)
-	}
-	#page_section #page_content {
-		grid-space(100%)
-	}
-	#page_section #page_sidebar {
-		grid-space(100%)
-	}
+
+@media screen and (max-width: 768px)
 	#page_section #page_sidebar .thumb {
 		width: 40%;
 	}
-	#page_header .login {
-		margin-right: 48px;
-	}
+
 	#page_header .login li {
 		margin: -10px auto 10px auto;
 	}
