--- a/public/styles/website/about.styl
+++ b/public/styles/website/about.styl
@@ -2,291 +2,93 @@
 	Import dependencies
 */
 
-@import "fluidity"
+@import "../shared/defaults.styl"
+@import "../shared/forms.styl"
+@import "../shared/menu_layouts.styl"
+@import "../shared/menu_styles.styl"
+@import "../shared/panels.styl"
 
-/*
-	Shared stuff that will end up in mixins
-*/
-
-// Defaults
-defaults()
-	font-size 85%
-	overflow-y auto
-	h1 
-		margin 0
-		float left
-
-// Control Styles
-
-button()
-	border-style solid
-	border-width 15px
-	border-image url("/assets/shared/border-05.png") 71 69 69 72 fill stretch
-	color #333
-	text-decoration none
-	margin 0.75em 0 0 0
-	float left
-	&:hover
-		button_hover()
-
-button_hover()
-	color #999999
-	border-width 15px
-	border-image url("/assets/shared/border-07.png") 71 69 69 72 fill stretch
-	transition all 0.25s ease
-
-textbox()
-	background transparent none
-	border-style solid
-	border-width 10px
-	border-image url("/assets/shared/border-04.png") 71 69 69 72 fill stretch
-	color #666666
-	text-decoration none
-	margin 0.75em 0 0 0
-	&:hover
-		textbox_hover()
-
-textbox_hover()
-	color #999999
-	border-image url("/assets/shared/border-08.png") 71 69 69 72 fill stretch
-	transition all 0.25s ease
-	box-sizing border-box
-
-// Content Styles
-
-featured_content_panel()
-	border-width 28px
-	border-image url("/assets/shared/border-03.png") 80 77 fill round
-	color #999999
-	box-sizing border-box
-	&
-		margin-left 2%
-	h2
-		color #FFFFFF
-		text-transform uppercase
-	> *
-		margin-left 0
-		margin-right 0
-
-
-featured_content_scroller_panel()
-	border-style solid
-	border-width 28px
-	border-image url("/assets/shared/border-02.png") 42 41 42 42 fill round
-	box-sizing border-box
-	&
-		margin-left 2%
-	> *
-		margin-left 0
-		margin-right 0
-	img
-		margin-right 15px
-
-
-feed_content_panel()
-	border-style solid
-	border-width 22px
-	border-image url("/assets/shared/border-08.png") 80 77 fill round
-	box-sizing border-box
-	&
-		margin-left 4%
-	h3
-		margin 0 0 0.825em 0
-		a
-			text-decoration none
-			color #AAAAAA
-	.thumb
-		max-width 30%
-		img
-			margin-right 15px
-	p
-		margin-top -2.5px
-		color #999999
-
-// Menu Layouts
-
-horiz_nav()
-	list-style none
-	li 
-		float left	
-
-vert_nav()
-	float left
-	height 100%
-	list-style none
-	li 
-		float left	
-		clear both
-
-thumb_nav()
-	margin 10px 20px
-	float left
-	list-style none
-	li 
-		margin 0
-		display block
-		float left
-		a
-			text-decoration none
-			display block
-			float left
-			border-style solid
-			border-width 24px
-			border-image: url("/assets/shared/border-08.png") 76 73 78 75 fill round;
-			box-sizing border-box
-			color #999999
-			&:hover
-				color #FFFFFF
-
-// Menu Styles
-
-main_menu()
-	overflow visible
-	border-style solid
-	border-width 45px
-	border-image url("/assets/shared/border-01.png") 81 fill round
-	transition-delay 0s
-	transition-duration 0.5s
-	transition-property all
-	transition-timing-function ease
-	box-sizing border-box
+@import "./layouts/content.styl"
 
 
 /*
 	Page styles
 */
 
-body
-	defaults()
+defaults()
 
-#bg 
-	width 100%
-	height 100%
-	position fixed
-	left 0px
-	top 0px
-	z-index -1 /* Ensure div tag stays behind content -999 might work, too. */
-
-.stretch 
-	width 100%
-	height 100%
-
-
-// Layouts
-#wrapper 
-	grid(80%, 1280px)
-
-#page_header 
-	grid-space(100%)
-	margin-bottom 7.5px
-
-	.login
-		horiz_nav()
+#page_header .login
+	horiz_nav()
+	float right
+	color #999999
+	border-style solid
+	border-width 28px
+	border-image url("/assets/shared/border-02.png") 42 41 42 42 fill round
+	box-sizing border-box
+	li
+		margin -10px auto
+	input[type='text']
+		textbox()
 		float right
-		color #999999
-		margin-right 0
-		border-style solid
-		border-width 28px
-		border-image url("/assets/shared/border-02.png") 42 41 42 42 fill round
-		box-sizing border-box
-		li
-			margin -10px auto
-		input[type='text']
-			textbox()
-			float right
-		input[type='checkbox'], label[for='chk_remember']
-			float left
-		input[type='checkbox']
-			margin-left 15px
-			clear left
-		label[for='chk_remember']
-			clear right
-		a
-			button()
+	input[type='checkbox'], label[for='chk_remember']
+		float left
+	input[type='checkbox']
+		margin-left 15px
+		clear left
+	label[for='chk_remember']
+		clear right
+	a
+		button()
 
-#page_section #page_nav 
-	grid-space(20%)
-	ul.vert_nav
-		vert_nav()
-		main_menu()
-		width 85%
-		overflow visible
-		li 
-			margin 0 0 0 -15px
-			width 100%
-		li a			
-			button()
-			width 100%
-			font-weight bold
-			text-transform uppercase
-			text-align center
+#page_section #page_nav ul.vert_nav
+	vert_nav()
+	main_menu()
+	overflow visible
+	li 
+		margin 0 0 0 -15px
+		width 100%
+	li a			
+		button()
+		width 100%
+		font-weight bold
+		text-transform uppercase
+		text-align center
 
 
+#page_section #page_content header
+	featured_content_panel()
 
-#page_section #page_content 
-	grid-space(40%)
-	header
-		featured_content_panel()
-	section
-		featured_content_scroller_panel()
-		ul.horiz_nav
-			horiz_nav()
-	footer
-		ul.thumb_nav
-			thumb_nav()
+#page_section #page_content section
+	featured_content_scroller_panel()
+	ul.horiz_nav
+		horiz_nav()
+
+#page_section #page_content footer
+	ul.thumb_nav
+		thumb_nav()
 
 
-#page_section #page_sidebar 
-	grid-space(40%)
-	article
-		feed_content_panel()
-		img
-			float left
+#page_section #page_sidebar article
+	feed_content_panel()
+	img
+		float left
  
 /*
 	Layout Responsiveness
 */
 
-@media screen and (max-width: 1280px)
-	#wrapper {
-		grid(90%,840px)
-	}
-	#page_section #page_nav {
-		grid-space(35%)
-	}
-	#page_section #page_content {
-		grid-space(60%)
-	}
-	#page_section #page_sidebar {
-		grid-space(97%)
-	}
+@media screen and (max-width: 1140px)
 	#page_section #page_sidebar .thumb {
 		width: 20%;
 	}
-	#page_header .login {
-		margin-right: 42px;
-	}
 
 
-@media screen and (max-width: 800px)
-	#wrapper {
-		grid(95%,320px)
-	}
-	#page_section #page_nav {
-		grid-space(100%)
-	}
-	#page_section #page_content {
-		grid-space(100%)
-	}
-	#page_section #page_sidebar {
-		grid-space(100%)
-	}
+
+@media screen and (max-width: 768px)
 	#page_section #page_sidebar .thumb {
 		width: 40%;
 	}
-	#page_header .login {
-		margin-right: 48px;
-	}
+
 	#page_header .login li {
 		margin: -10px auto 10px auto;
 	}
